# capacitor-wasm-agent-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CapacitorWasmAgentTools.podspec  Package.swift  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
android/: build.gradle
example/: capacitor.config.json  package.json  test-e2e-android.mjs  test-e2e-ios.mjs
example/www/: index.html
ios/Frameworks/WasmAgentToolsFFI.xcframework/: Info.plist
ios/Sources/WasmAgentToolsPlugin/: WasmAgentToolsPlugin.swift
rust/wasm-agent-tools-ffi/: Cargo.toml
rust/wasm-agent-tools-ffi/c/: quickjs_wasi_main.c
rust/wasm-agent-tools-ffi/src/: engine.rs  js_runtime.rs  lib.rs  python_runtime.rs  sandbox.rs  wasi_executor.rs
rust/wasm-agent-tools-ffi/tests/fixtures/python-cli/: Cargo.toml
rust/wasm-agent-tools-ffi/tests/fixtures/python-cli/src/: main.rs
rust/wasm-agent-tools-ffi/tests/fixtures/quickjs-cli/: Cargo.toml
rust/wasm-agent-tools-ffi/tests/fixtures/quickjs-cli/src/: main.rs
rust/wasm-agent-tools-ffi/tests/fixtures/wasi-smoke/: Cargo.toml
rust/wasm-agent-tools-ffi/tests/fixtures/wasi-smoke/src/: main.rs
rust/wasm-agent-tools-ffi/wasm/: quickjs.wasm
rust/wasmtime-asm-macros-patched/: Cargo.toml
rust/wasmtime-asm-macros-patched/src/: lib.rs
rust/wasmtime-fiber-patched/: Cargo.toml
scripts/: build-android.sh  build-ios.sh  build-quickjs-wasm.sh  build-rustpython-wasm.sh
src/: definitions.ts  index.ts  web.ts
(+6 files in other folders)
